--- a/frontend/src/main/java/app/index.html
+++ b/frontend/src/main/java/app/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Cup bidder</title>
+
+    <link rel="stylesheet" href="overview/overview.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script src="app.js"></script>
