--- a/frontend/src/main/java/app/overview/overview.html
+++ b/frontend/src/main/java/app/overview/overview.html
@@ -1,42 +1,51 @@
-<div ng-controller="overviewCtrl">
-    <p>OverView</p>
+<div ng-controller="overviewCtrl" class="container">
+    <p>Overview</p>
 
-    <table class="cups">
-        <tr>
-            <th>No</th>
-            <th/>
-            <th>Name</th>
-            <th>Start date</th>
-            <th>End date</th>
-            <th/>
-        </tr>
-        <tr ng-repeat="cup in cups">
-            <td>{{ $index + 1 }}</td>
-            <td ng-if="!edit"> <input type="button" value="Edit" ng-click="editCup($index)"> </td>
-            <td ng-if="edit"> <input type="button" value="Save" ng-click="saveCup($index)"> </td>
+    <div class="table-responsive marginLeft15">
+        <table class="table-bordered thPadding5 tdPadding5">
+            <tr>
+                <th>No</th>
+                <th>Actions</th>
+                <th>Name</th>
+                <th>Start date</th>
+                <th>End date</th>
+                <th/>
+            </tr>
+            <tr ng-repeat="cup in cups">
+                <td>{{ $index + 1 }}</td>
+                <td ng-if="!edit"> <input type="button" class="btn btn-primary btn-sm" value="Edit" ng-click="editCup($index)"> </td>
+                <td ng-if="edit">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success btn-sm" ng-click="saveCup($index)">Save</button>
+                        <button type="button" class="btn btn-info btn-sm" ng-click="cancelEditing()">Cancel</button>
+                    </div>
+                </td>
 
-            <td ng-if="!edit">{{ cup.name }}</td>
-            <td ng-if="edit"> <input type="text" ng-model="cupNames[$index]" /> </td>
+                <td ng-if="!edit">{{ cup.name }}</td>
+                <td ng-if="edit"> <input type="text" ng-model="cupNames[$index]" /> </td>
 
-            <td>{{ cup.startDateTime | date : 'yyyy-MM-dd HH:mm' }}</td>
-            <td>{{ cup.endDateTime | date : 'yyyy-MM-dd HH:mm' }}</td>
+                <td>{{ cup.startDateTime | date : 'yyyy-MM-dd HH:mm' }}</td>
+                <td>{{ cup.endDateTime | date : 'yyyy-MM-dd HH:mm' }}</td>
 
-            <td ng-if="!showGame"> <input type="button" value="Show games" ng-click="showGames($index)"> </td>
-            <td ng-if="showGame"> <input type="button" value="Hide games" ng-click="hideGames()"> </td>
-        </tr>
-    </table>
+                <td ng-if="!showGame"> <button type="button" class="btn btn-success btn-sm" ng-click="showGames($index)">Show games</button> </td>
+                <td ng-if="showGame"> <button type="button" class="btn btn-warning btn-sm" ng-click="hideGames()">Hide games</button></td>
+            </tr>
+        </table>
+    </div>
 
     <p ng-if="saveCompleted" ng-mouseover="disappear()"> Record is changed.</p>
 
-    <div ng-if="showGame">
-        <table class="cups">
+    <div ng-if="showGame" class="table-responsive marginLeft15">
+        <table class="table-condensed">
             <tr>
                 <th>Home</th>
+                <th/>
                 <th>Away</th>
                 <th>Start date</th>
             </tr>
             <tr ng-repeat="game in games">
                 <td>{{ game.homeTeamName }}</td>
+                <td> - </td>
                 <td>{{ game.awayTeamName }}</td>
                 <td>{{ game.startDateTime | date : 'yyyy-MM-dd HH:mm' }}</td>
             </tr>
