--- a/frontend/src/main/java/app/login/login.html
+++ b/frontend/src/main/java/app/login/login.html
@@ -1,10 +1,22 @@
 <div ng-controller="loginCtrl">
+    <div class="container">
+        <div class="form-group">
+            <div class="col-xs-3">
+                <label for="email">E-mail:</label>
+                <input type="text" class="form-control" ng-model="email" id="email"/>
+                <br/>
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" ng-model="password" id="pwd">
+            </div>
+        </div>
+    </div>
 
-    <a href="#!/" ng-click="goToStartup()">Got to startup.</a>
-
-    <p>Email: <input type="email" ng-model="email"/></p>
-    <p>Password: <input type="secret" ng-model="password"/></p>
-
-    <p><a href="#!/overview" ng-click="login()">Login</a></p>
+    <div class="container">
+        <p>
+            <p><a href="#!/overview" ng-click="login()">Login</a> </p>
+            <br/>
+            <p><a href="#!/" ng-click="goToStartup()">Go to welcome screen</a> </p>
+        </p>
+    </div>
 
 </div>
