--- a/frontend/src/main/java/app/login/login.html
+++ b/frontend/src/main/java/app/login/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="loginCtrl">
+<div ng-controller="LoginController">
     <div class="container">
         <div class="form-group">
             <div class="col-xs-3">
@@ -12,11 +12,11 @@
     </div>
 
     <div class="container">
-        <p>
-            <p><a href="#!/overview" ng-click="login()">Login</a> </p>
-            <br/>
+            <div class="form-group marginLeft15">
+                <h1> </h1>
+                <a href="#!/overview" ng-click="login()">Login</a>
+            </div>
             <p><a href="#!/" ng-click="goToStartup()">Go to welcome screen</a> </p>
-        </p>
     </div>
 
 </div>
