--- a/frontend/src/main/java/app/index.html
+++ b/frontend/src/main/java/app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="overview/overview.css">
     <link rel="stylesheet" href="login/login.css">
+    <link rel="stylesheet" href="bid/bid.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
