--- a/frontend/src/main/java/app/overview/overview.html
+++ b/frontend/src/main/java/app/overview/overview.html
@@ -20,12 +20,10 @@
             </tr>
             <tr ng-repeat="cup in cups">
                 <td>{{ $index + 1 }}</td>
-                <td ng-if="!edit"> <input type="button" class="btn btn-primary btn-sm" value="Edit" ng-click="editCup($index)"> </td>
+                <td ng-if="!edit"> <input type="button" class="btn btn-primary btn-xs" value="Edit" ng-click="editCup($index)"> </td>
                 <td ng-if="edit">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-success btn-sm" ng-click="saveCup($index)">Save</button>
-                        <button type="button" class="btn btn-info btn-sm" ng-click="cancelEditing()">Cancel</button>
-                    </div>
+                    <button type="button" class="btn btn-success btn-xs" ng-click="saveCup($index)">Save</button>
+                    <button type="button" class="btn btn-info btn-xs" ng-click="cancelEditing()">Cancel</button>
                 </td>
 
                 <td ng-if="!edit">{{ cup.name }}</td>
@@ -34,8 +32,8 @@
                 <td>{{ cup.startDateTime | date : 'yyyy MMM d @ HH:mm' }}</td>
                 <td>{{ cup.endDateTime | date : 'yyyy MMM d @ HH:mm' }}</td>
 
-                <td ng-if="!showGame"> <button type="button" class="btn btn-success btn-sm" ng-click="showGames($index)">Show games</button> </td>
-                <td ng-if="showGame"> <button type="button" class="btn btn-warning btn-sm" ng-click="hideGames()">Hide games</button></td>
+                <td ng-if="!showGame"> <button type="button" class="btn btn-success btn-xs" ng-click="showGames($index)">Show games</button> </td>
+                <td ng-if="showGame"> <button type="button" class="btn btn-warning btn-xs" ng-click="hideGames()">Hide games</button></td>
             </tr>
         </table>
     </div>
