--- a/frontend/src/main/java/app/login/login.html
+++ b/frontend/src/main/java/app/login/login.html
@@ -12,11 +12,10 @@
     </div>
 
     <div class="container">
-            <div class="form-group marginLeft15">
-                <h1> </h1>
-                <a href="#!/overview" ng-click="login()">Login</a>
-            </div>
-            <p><a href="#!/" ng-click="goToStartup()">Go to welcome screen</a> </p>
+        <div class="form-group marginLeft15">
+            <h1> </h1>
+            <a href="#!/overview" ng-click="login()">Login</a> | <a href="#!/" ng-click="goToStartup()">Welcome screen</a>
+        </div>
     </div>
 
 </div>
