--- a/frontend/src/main/java/app/login/login.html
+++ b/frontend/src/main/java/app/login/login.html
@@ -15,7 +15,7 @@
         <div class="form-group marginLeft15">
             <h1> </h1>
             <button type="button" ng-click="login()" class="btn btn-info btn-xs">Login</button>
-            <span ng-if="error" class="errorLoginMsg" ng-bind="requestErrorMsg"/>
+            <span ng-if="error" class="errorLoginMsg" ng-bind="requestErrorMsg"></span>
             <hr/>
             <p><a href="#!/" ng-click="goToStartup()">Welcome screen</a></p>
         </div>
