--- a/frontend/src/main/java/app/bid/bid.html
+++ b/frontend/src/main/java/app/bid/bid.html
@@ -1,5 +1,5 @@
 <div ng-controller="BidController" class="container">
-    <div ng-include="'includes/topTemplate.html'"></div>
+    <div ng-include="'includes/topMenu.html'"></div>
 
     <h3 ng-if="isAdmin">Add scores [Admin]</h3>
     <h3 ng-if="!isAdmin">Add bids [Bidder]</h3>
