--- a/frontend/src/main/java/app/overview/overview.html
+++ b/frontend/src/main/java/app/overview/overview.html
@@ -1,5 +1,5 @@
 <div ng-clock ng-controller="OverviewController" class="container">
-    <div ng-include="'includes/topTemplate.html'"></div>
+    <div ng-include="'includes/topMenu.html'"></div>
 
     <h3>Overview</h3>
     <div class="table-responsive marginLeft15">
