--- a/frontend/src/main/java/app/bid/bid.html
+++ b/frontend/src/main/java/app/bid/bid.html
@@ -1,9 +1,11 @@
 <div ng-controller="BidController" class="container">
     <div ng-include="'includes/topMenu.html'"></div>
 
+    <div ng-if="cups.length == 0">There is no running cups right now.</div>
+
     <h3 ng-if="isAdmin">Add scores [Admin]</h3>
-    <div ng-if="!isAdmin">
-        <h3 ng-if="!isAdmin">
+    <div ng-if="!isAdmin && cups.length > 0">
+        <h3>
             <span>Add bids </span>
             <span ng-if="isGambler">[Gambler]</span>
             <span ng-if="isBidder">[Bidder]</span>
@@ -11,8 +13,10 @@
         </h3>
     </div>
 
+    <div ng-if="showHint">Choose cup to see possible bids.</div>
+
     <span ng-repeat="cup in cups track by cup.id">
-        <button type="button" class="btn btn-success btn-xs" ng-click="showGames($index)">{{cup.name}}</button>
+        <button type="button" class="btn btn-primary btn-xs" ng-click="showGames($index)">{{cup.name}}</button>
     </span>
 
     <div ng-if="showGamesToBid" ng-include="'includes/gamesTable.html'" class="table-responsive marginLeft15"></div>
